Added block, include and extends

--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html> <!-- Используется html 5 версии -->
-<html lang="ru"> <!-- Язык сайта - русский -->
+<!DOCTYPE html>
+<html lang="ru">
   <head>    
     {% block head %}
     {% endblock %}
@@ -13,7 +13,7 @@
         Произошли непредвиденные неполадки
       {% endblock %}
     </main>       
-    <footer>
+    <footer class="border-top text-center py-3">
       {% include 'includes/footer.html' %}
     </footer>
   </body>
