--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,4 +1,4 @@
-{% {% extends 'base.html' %}%}
+{% extends 'base.html' %}
 {% block head %}   
   <meta charset="utf-8"> <!-- Кодировка сайта -->
   <!-- Сайт готов работать с мобильными устройствами -->
