--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#ffffff">
   <!-- Подключен файл со стандартными стилями бустрап -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <title>Лев Толстой – зеркало русской революции.</title>
+  <title>{{ title }}</title>
 {% endblock %}
 {% block contant %}
   <!-- класс py-5 создает отступы сверху и снизу блока -->
