--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -37,7 +37,8 @@
         къ казачьей батареѣ; совѣтъ, которому я не послѣдую. Желчно спорилъ вечеромъ съ Фриде 
         и Бабарыкинымъ, ругалъ Сержпутовскому и ничего не сдѣлалъ, вотъ 3 упрека, которыя дѣлаю с
         ебѣ за нынѣшній день. (3)
-      </p>         
+      </p>
+      <a href = "{% url 'posts:index' %}">Главная страница</a>
     </article>
     <hr>
     <article>
@@ -60,7 +61,8 @@
         чтобы не пойдти пошляться. Идя отъ ужина, мы съ Тишк[евичемъ] остановились у бардели и насъ 
         накрылъ Крыжановскій, что, признаюсь, было мнѣ не совсѣмъ пріятно. Упрекаю себя за 
         безхарактерность, что не высидѣлъ дома, и зa праздность цѣлаго дня. Это главный пунктъ. (2)
-      </p>      
+      </p>
+      <a href = "{% url 'posts:index' %}">Главная страница</a>      
     </article>
     <hr>
     <article>
@@ -80,6 +82,7 @@
         Гембичомъ, потомъ болталъ съ Шубинымъ и съ Сашей Горчаковымъ. — Исключая праздности, 
         днемъ своимъ очень доволенъ. (1)
       </p>
+      <a href = "{% url 'posts:index' %}">Главная страница</a>
     </article>
     <!-- под последним постом нет линии -->
   </div>  
