--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block head %}    
   <meta charset="utf-8"> <!-- Кодировка сайта -->
   <!-- Сайт готов работать с мобильными устройствами -->
@@ -11,7 +12,7 @@
   <meta name="msapplication-TileColor" content="#000">
   <meta name="theme-color" content="#ffffff">
   <!-- Подключен файл со стандартными стилями бустрап -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <title>{{ title }}</title>
 {% endblock %}
 {% block contant %} 
