--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -27,8 +27,8 @@
 </ul>
 <p>{{ post.text }}</p>    
 {% if post.group %}
-<a href="{% url 'posts:group' post.group.slug %}">все записи группы</a>
+  <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
 {% endif %}
 {% if not forloop.last %}<hr>{% endif %}
-{% endfor %}  
+{% endfor %}
 {% endblock %}
